--- a/netlify.toml
+++ b/netlify.toml
@@ -9,16 +9,20 @@
 
 [dev]
   functions = "netlify/functions"
-  framework = "vite"
-  targetPort = 5173
+  framework = "#custom"
   command = "vite"
+  targetPort = 5173
   port = 8888
 
 [functions]
   directory = "netlify/functions"
 
 [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
