--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -309,7 +309,7 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.claim-points]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/claim-points/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
@@ -317,3 +317,15 @@ entrypoint = "./functions/claim-points/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/claim-points/*.html" ]
+
+[functions.get-user-nfts]
+enabled = true
+verify_jwt = false
+import_map = "./functions/get-user-nfts/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/get-user-nfts/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/get-user-nfts/*.html" ]
+
